--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
 	"rules": {
 		"prettier/prettier": "error",
 		"indent": ["error", "tab"],
-		"no-console": ["allow"],
+		"no-console": ["none"],
 		"linebreak-style": ["error", "unix"],
 		"quotes": ["error", "double"],
 		"semi": ["error", "never"]
