--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
-    "tabWidth": 4,
-    "bracketSpacing": true,
-    "singleQuote": false,
-    "requirePragma": false,
-    "useTabs": true,
-    "semi": false,
-    "arrowParens": "avoid"
+	"tabWidth": 4,
+	"bracketSpacing": true,
+	"singleQuote": false,
+	"requirePragma": false,
+	"useTabs": true,
+	"semi": false,
+	"arrowParens": "avoid",
+	"overrides": [
+		{
+			"files": "*.hbs",
+			"options": { "parser": "html" }
+		}
+	]
 }
