--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
     "presets": [
         "@babel/preset-env",
-        "flow"
+        "@babel/preset-flow"
     ],
     "sourceMaps": "inline"
 }
