--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "faker": "^4.1.0",
+    "knex": "^0.16.3",
     "morgan": "^1.9.1",
+    "pg": "^7.7.1",
     "session-file-store": "^1.2.0"
   },
   "devDependencies": {
