--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "browser-sync": "^2.26.3",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-prettier": "^3.0.0",
     "flow-bin": "^0.89.0",
     "gulp": "^4.0.0",
