add class properties to babel

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-    "presets": [
-        "@babel/preset-env",
-        "@babel/preset-flow"
-    ],
-    "sourceMaps": "inline"
+	"presets": ["@babel/preset-env", "@babel/preset-flow"],
+	"sourceMaps": "inline",
+	"plugins": ["@babel/plugin-proposal-class-properties"]
 }
