remove vscode flow errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
-    "editor.formatOnSave": true,
-    "prettier.eslintIntegration": true,
-    "prettier.semi": false,
-    "prettier.tabWidth": 4,
-    "prettier.useTabs": true,
-    "html.format.indentHandlebars": true
+	"editor.formatOnSave": true,
+	"prettier.eslintIntegration": true,
+	"prettier.semi": false,
+	"prettier.tabWidth": 4,
+	"prettier.useTabs": true,
+	"html.format.indentHandlebars": true,
+	"javascript.validate.enable": false,
+	"files.eol": "\n"
 }
