--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
 	"prettier.useTabs": true,
 	"html.format.indentHandlebars": true,
 	"javascript.validate.enable": false,
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"jest.pathToJest": "npm run test -- "
 }
