--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^23.6.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
+    "superagent": "^4.1.0",
     "supertest": "^3.3.0",
     "supertest-session": "^3.3.0"
   },
@@ -55,6 +56,7 @@
     "watch": "gulp watch",
     "sass": "gulp sass",
     "dev": "gulp",
-    "test": "jest"
+    "test": "jest",
+    "test:debug": "node --inspect node_modules/jest/bin/jest --runInBand"
   }
 }
