--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.3",
+    "browserify": "^16.2.3",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-flowtype": "^3.2.1",
@@ -44,12 +46,16 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
     "jest": "^23.6.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
     "superagent": "^4.1.0",
     "supertest": "^3.3.0",
-    "supertest-session": "^3.3.0"
+    "supertest-session": "^3.3.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "vinyl-transform": "^1.0.0"
   },
   "scripts": {
     "start": "nodemon index.js --exec babel-node",
