--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Ayush Nene <ayush3108@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "connect-session-knex": "^1.4.0",
     "dotenv": "^6.2.0",
@@ -18,7 +19,8 @@
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "pg": "^7.7.1",
-    "session-file-store": "^1.2.0"
+    "session-file-store": "^1.2.0",
+    "vue": "^2.5.22"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
