--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 		"@babel/plugin-proposal-class-properties": "^7.2.3",
 		"@babel/preset-env": "^7.2.0",
 		"@babel/preset-flow": "^7.0.0",
+		"axios": "^0.18.0",
 		"babel-core": "7.0.0-bridge.0",
 		"babel-eslint": "^10.0.1",
 		"babel-jest": "^23.6.0",
-		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
 		"connect-session-knex": "^1.4.0",
 		"dotenv": "^6.2.0",
@@ -28,6 +28,7 @@
 		"lodash": "^4.17.11",
 		"morgan": "^1.9.1",
 		"pg": "^7.7.1",
+		"scrollmonitor": "^1.2.4",
 		"session-file-store": "^1.2.0",
 		"vue": "^2.5.22"
 	},
